--- a/amstory/src/main/res/layout/item_list_story.xml
+++ b/amstory/src/main/res/layout/item_list_story.xml
@@ -2,15 +2,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/transparent"
-    android:padding="3dp"
-    >
+    android:padding="3dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="7dp">
+        android:layout_marginTop="@dimen/dimens_5dp"
+        android:layout_marginBottom="@dimen/dimens_5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,54 +21,94 @@
             android:orientation="vertical"
             android:padding="12dp">
 
-            <RelativeLayout
+            <andoop.android.amstory.view.CircularView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="@dimen/dimens_200dp"
+                app:radius="@dimen/dimens_10dp">
 
                 <ImageView
                     android:id="@+id/list_icon"
                     android:layout_width="match_parent"
-                    android:layout_height="180dp"
+                    android:layout_height="match_parent"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/ic_launcher" />
 
-                <ImageView
-                    android:id="@+id/iv_list_listen"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/type_bg"
-                    android:padding="5dp"
-                    android:src="@drawable/ic_listen_icon" />
+                <RelativeLayout
+                    android:background="#44000000"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/dimens_15dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dimens_40dp">
 
-            </RelativeLayout>
+                    <ImageView
+                        android:id="@+id/iv_icon"
+                        android:src="@drawable/play"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
-            <RelativeLayout
+                    <TextView
+                        android:id="@+id/tv_title"
+                        android:layout_toRightOf="@id/iv_icon"
+                        android:textColor="@color/white"
+                        android:text="荞麦 — 安徒生"
+                        android:paddingLeft="@dimen/dimens_10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_marginRight="@dimen/dimens_20dp"
+                        android:layout_alignParentRight="true"
+                        android:id="@+id/tv_time"
+                        android:text="3:35"
+                        android:textColor="@color/white"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </RelativeLayout>
+
+            </andoop.android.amstory.view.CircularView>
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#aaffffff">
-
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
                 <TextView
                     android:id="@+id/list_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginTop="8dp"
-                    android:text="name"
-                    android:textColor="#000"
-                    android:textSize="17sp"
-                    android:textStyle="bold" />
-
+                    android:textColor="@color/appblue"
+                    android:textSize="16sp"
+                    android:layout_marginRight="10dp"
+                    android:textStyle="bold"
+                    android:text="荞麦"/>
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/appblue"/>
                 <TextView
                     android:id="@+id/list_author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/list_name"
-                    android:layout_marginTop="10sp"
-                    android:text="作者：未知"
-                    android:textColor="@color/appgray"
-                    android:textSize="11sp" />
-            </RelativeLayout>
+                    android:textColor="@color/appblue"
+                    android:textSize="16sp"
+                    android:layout_marginLeft="10dp"
+                    android:text="安徒生"/>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/dimens_10dp"
+                android:layout_marginRight="10dp"
+                android:lines="2"
+                android:textSize="12sp"
+                android:lineSpacingExtra="3dp"
+                android:ellipsize="end"
+                />
 
 
             <View
