--- a/amstory/src/main/res/layout/tuijian_fragment_vp_item.xml
+++ b/amstory/src/main/res/layout/tuijian_fragment_vp_item.xml
@@ -8,6 +8,7 @@
     >
 
     <android.support.v7.widget.CardView
+        android:id="@+id/itme_card"
         android:layout_width="match_parent"
         app:cardElevation="8dp"
         android:clickable="true"
@@ -37,14 +38,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_listen_selected"/>
-
-                <ImageView
-                    android:id="@+id/iv_play_tuijian_vp_item"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_centerInParent="true"
-                    android:visibility="visible"
-                    android:src="@drawable/bofang"/>
 
             </RelativeLayout>
 
