--- a/amstory/src/main/res/values/attrs.xml
+++ b/amstory/src/main/res/values/attrs.xml
@@ -35,4 +35,12 @@
         <attr name="vertical_spacing" format="dimension"/>
     </declare-styleable>
 
+    <declare-styleable name="CircularView">
+        <attr name="radius" format="dimension" />
+        <attr name="topLeftRadius" format="dimension" />
+        <attr name="topRightRadius" format="dimension" />
+        <attr name="bottomLeftRadius" format="dimension" />
+        <attr name="bottomRightRadius" format="dimension" />
+    </declare-styleable>
+
 </resources>
