--- a/amstory/src/main/res/values/dimens.xml
+++ b/amstory/src/main/res/values/dimens.xml
@@ -7,7 +7,17 @@
     <dimen name="pause_bar_distance">40dp</dimen>
     <dimen name="pause_bar_height">144dp</dimen>
 
+    <dimen name="dimens_1dp">1dp</dimen>
+    <dimen name="dimens_30dp">30dp</dimen>
+    <dimen name="dimens_10dp">10dp</dimen>
+    <dimen name="dimens_5dp">5dp</dimen>
+    <dimen name="dimens_15dp">15dp</dimen>
+    <dimen name="dimens_20dp">20dp</dimen>
     <dimen name="title_height">50dp</dimen>
+    <dimen name="dimens_40dp">40dp</dimen>
+    <dimen name="dimens_50dp">50dp</dimen>
+    <dimen name="dimens_60dp">60dp</dimen>
+    <dimen name="dimens_200dp">200dp</dimen>
 
 
 </resources>
