修改添加页面

--- a/amstory/src/main/res/layout/activity_mplayer.xml
+++ b/amstory/src/main/res/layout/activity_mplayer.xml
@@ -2,70 +2,135 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#25272d">
-
-    <TextView
-        android:id="@+id/textViewSong"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textColor="@android:color/white"
-        android:textSize="22sp"
-        android:text="Rock With You"
-        android:layout_marginTop="50dp"/>
-
-
-    <TextView
-        android:id="@+id/textViewSinger"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textColor="#80FFFFFF"
-        android:textSize="15sp"
-        android:text="Michael Jackson"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/textViewSong"/>
-
-
-    <andoop.android.amstory.customview.playerview.MusicPlayerView
-        android:id="@+id/mpv"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
-        android:layout_below="@+id/textViewSinger"
-        app:textSize = "14sp"
-        app:textColor = "#80FFFFFF"
-        app:buttonColor = "#ff0028"
-        app:progressLoadedColor = "#00815e"/>
+    >
 
     <ImageView
-        android:id="@+id/like"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@drawable/icon_like"
-        android:layout_below="@+id/mpv"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"/>
+        android:id="@+id/rootView"
+        android:src="@color/appgray"
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#55000000"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
+
+        <RelativeLayout
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/title_height">
+
+            <ImageView
+                android:id="@+id/back"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingLeft="@dimen/dimens_10dp"
+                android:paddingRight="@dimen/dimens_10dp"
+                android:src="@drawable/back_w" />
+
+            <ImageView
+                android:id="@+id/playlist"
+                android:layout_width="@dimen/dimens_40dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:padding="@dimen/dimens_10dp"
+                android:src="@drawable/playlist" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/textViewSong"
+            android:layout_below="@id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textColor="@android:color/white"
+            android:textSize="22sp"
+            android:text="Rock With You"
+            android:layout_marginTop="@dimen/dimens_30dp"/>
 
 
-    <ImageView
-        android:id="@+id/next"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@drawable/icon_next"
-        android:layout_below="@+id/mpv"
-        android:layout_alignRight="@+id/mpv"
-        android:layout_marginTop="50dp"/>
+        <TextView
+            android:id="@+id/textViewSinger"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:text="Michael Jackson"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/textViewSong"/>
 
 
-    <ImageView
-        android:id="@+id/previous"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@drawable/icon_previous"
-        android:layout_below="@+id/mpv"
-        android:layout_alignLeft="@+id/mpv"
-        android:layout_marginTop="50dp"/>
+        <andoop.android.amstory.customview.playerview.MusicPlayerView
+            android:id="@+id/mpv"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_centerInParent="true"
+            app:textSize = "14sp"
+            app:textColor = "@color/white"
+            app:buttonColor = "@color/appblue"
+            app:progressEmptyColor = "#88ffffff"
+            app:progressLoadedColor = "#00815e"
+            app:cover = "@drawable/translucent"
+            />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:layout_below="@+id/mpv"
+            android:layout_centerHorizontal="true">
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="@dimen/dimens_30dp"
+                android:layout_marginRight="@dimen/dimens_30dp"
+                android:id="@+id/like"
+                android:background="@drawable/like_w"
+                 />
+            <ImageView
+                android:id="@+id/share"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="@dimen/dimens_30dp"
+                android:layout_marginRight="@dimen/dimens_30dp"
+                android:background="@drawable/share"
+                 />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/order"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/order"
+            android:layout_below="@+id/mpv"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"/>
+
+        <ImageView
+            android:id="@+id/next"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/icon_next"
+            android:layout_below="@+id/mpv"
+            android:layout_alignRight="@+id/mpv"
+            android:layout_marginTop="50dp"/>
+
+
+        <ImageView
+            android:id="@+id/previous"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/icon_previous"
+            android:layout_below="@+id/mpv"
+            android:layout_alignLeft="@+id/mpv"
+            android:layout_marginTop="50dp"/>
+    </RelativeLayout>
 
 </RelativeLayout>
