--- a/amstory/src/main/res/layout/activity_person_setting.xml
+++ b/amstory/src/main/res/layout/activity_person_setting.xml
@@ -79,13 +79,13 @@
             android:src="@drawable/right"/>
     </LinearLayout>
 
-    <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0.5dp"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:layout_marginRight="10dp"-->
-        <!--android:background="#C2C2C2"-->
-        <!--/>-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@color/person_bgcolor"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
@@ -107,13 +107,13 @@
             android:layout_height="20dp"
             android:src="@drawable/right"/>
     </LinearLayout>
-   <!-- <View
+   <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="#C2C2C2"
-        />-->
+       android:background="@color/person_bgcolor"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -136,13 +136,13 @@
             android:layout_marginRight="10dp"
             android:src="@drawable/right"/>
     </LinearLayout>
-    <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0.5dp"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:layout_marginRight="10dp"-->
-        <!--android:background="#C2C2C2"-->
-        <!--/>-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@color/person_bgcolor"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -174,25 +174,25 @@
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_height="120dp">
-        <RelativeLayout
-            android:layout_width="140dp"
-            android:layout_height="match_parent">
-            <ImageView
-                android:layout_centerInParent="true"
-                android:id="@+id/child_iv"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/my_user_default"/>
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@drawable/xiangji"
-                android:layout_toRightOf="@id/child_iv"
-                android:layout_alignParentBottom="true"
-                android:layout_marginLeft="-20dp"
-                android:layout_marginBottom="20dp"
-                />
-        </RelativeLayout>
+        <!--<RelativeLayout-->
+            <!--android:layout_width="140dp"-->
+            <!--android:layout_height="match_parent">-->
+            <!--<ImageView-->
+                <!--android:layout_centerInParent="true"-->
+                <!--android:id="@+id/child_iv"-->
+                <!--android:layout_width="80dp"-->
+                <!--android:layout_height="80dp"-->
+                <!--android:src="@drawable/my_user_default"/>-->
+            <!--<ImageView-->
+                <!--android:layout_width="20dp"-->
+                <!--android:layout_height="20dp"-->
+                <!--android:background="@drawable/xiangji"-->
+                <!--android:layout_toRightOf="@id/child_iv"-->
+                <!--android:layout_alignParentBottom="true"-->
+                <!--android:layout_marginLeft="-20dp"-->
+                <!--android:layout_marginBottom="20dp"-->
+                <!--/>-->
+        <!--</RelativeLayout>-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -219,6 +219,14 @@
                     android:src="@drawable/right"/>
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/person_bgcolor"
+                />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp">
@@ -239,6 +247,14 @@
                     android:layout_height="20dp"
                     android:src="@drawable/right"/>
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/person_bgcolor"
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
