--- a/amstory/src/main/res/layout/activity_story_detail.xml
+++ b/amstory/src/main/res/layout/activity_story_detail.xml
@@ -11,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#fff"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <include layout="@layout/comment_title_02"/>
 
