--- a/amstory/src/main/res/layout/item_rv_faxian.xml
+++ b/amstory/src/main/res/layout/item_rv_faxian.xml
@@ -17,12 +17,38 @@
             android:scaleType="fitXY"
             />
 
-        <ImageView
+        <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@mipmap/ic_launcher"-->
+            <!--android:layout_centerInParent="true"-->
+            <!--android:visibility="gone"/>-->
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"
             android:layout_centerInParent="true"
-            android:visibility="gone"/>
+            android:gravity="center"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_title"
+                android:text="我是大标题"
+                android:textStyle="bold"
+                android:textSize="@dimen/dimens_18sp"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:id="@+id/tv_author"
+                android:layout_marginTop="@dimen/dimens_5dp"
+                android:text="我是小标题"
+                android:textSize="@dimen/dimens_13sp"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
 
     </RelativeLayout>
 
