--- a/amstory/src/main/res/layout/personal_fragment_layout.xml
+++ b/amstory/src/main/res/layout/personal_fragment_layout.xml
@@ -201,9 +201,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
+                    android:drawableRight="@drawable/babyboy"
                     android:textColor="@color/appgray"
                     android:layout_marginLeft="25dp"
-                    android:text="男"/>
+                    android:text=""/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
