--- a/amstory/src/main/res/values/colors.xml
+++ b/amstory/src/main/res/values/colors.xml
@@ -35,6 +35,7 @@
     <color name="holo_blue">#3a69f7</color>
     <color name="appgray">#444444</color>
     <color name="blue">#7FABFD</color>
+    <color name="BFBFBF">#BFBFBF</color>
 
     <color name="person_bgcolor">#f0ffff</color>
     <color name="base_text_color">#7babfd</color>
