--- a/amstory/src/main/res/values/dimens.xml
+++ b/amstory/src/main/res/values/dimens.xml
@@ -7,16 +7,28 @@
     <dimen name="pause_bar_distance">40dp</dimen>
     <dimen name="pause_bar_height">144dp</dimen>
 
+    <dimen name="dimens_12sp">12sp</dimen>
+    <dimen name="dimens_13sp">13sp</dimen>
+    <dimen name="dimens_15sp">15sp</dimen>
+    <dimen name="dimens_18sp">18sp</dimen>
+    <dimen name="dimens_20sp">20sp</dimen>
+
+
     <dimen name="dimens_1dp">1dp</dimen>
-    <dimen name="dimens_30dp">30dp</dimen>
-    <dimen name="dimens_10dp">10dp</dimen>
     <dimen name="dimens_5dp">5dp</dimen>
+    <dimen name="dimens_8dp">8dp</dimen>
+    <dimen name="dimens_10dp">10dp</dimen>
+    <dimen name="dimens_13dp">13dp</dimen>
     <dimen name="dimens_15dp">15dp</dimen>
     <dimen name="dimens_20dp">20dp</dimen>
-    <dimen name="title_height">50dp</dimen>
+    <dimen name="dimens_25dp">25dp</dimen>
+    <dimen name="dimens_30dp">30dp</dimen>
     <dimen name="dimens_40dp">40dp</dimen>
+    <dimen name="title_height">50dp</dimen>
     <dimen name="dimens_50dp">50dp</dimen>
     <dimen name="dimens_60dp">60dp</dimen>
+    <dimen name="dimens_70dp">70dp</dimen>
+    <dimen name="dimens_80dp">80dp</dimen>
     <dimen name="dimens_200dp">200dp</dimen>
 
 
