--- a/amstory/src/main/res/layout/activity_bg_list.xml
+++ b/amstory/src/main/res/layout/activity_bg_list.xml
@@ -14,6 +14,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:onClick="onFinish"
         android:layout_weight="1"/>
 
     <LinearLayout
