--- a/amstory/src/main/res/layout/activity_finish_record.xml
+++ b/amstory/src/main/res/layout/activity_finish_record.xml
@@ -42,6 +42,7 @@
     </RelativeLayout>
 
     <EditText
+        android:background="@null"
         android:id="@+id/et_fr_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,6 +63,7 @@
 
     <EditText
         android:id="@+id/et_fr_content"
+        android:background="@null"
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:textSize="12sp"
@@ -70,39 +72,39 @@
         android:layout_marginRight="20dp"
         android:gravity="top"
         android:hint="我在暖音录制了一个故事,快来听听吧。"/>
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="5dp"
-       android:orientation="horizontal">
+   <!--<LinearLayout-->
+       <!--android:layout_width="match_parent"-->
+       <!--android:layout_height="wrap_content"-->
+       <!--android:layout_marginTop="5dp"-->
+       <!--android:orientation="horizontal">-->
 
-       <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:textColor="@color/appgray"
-           android:textSize="11sp"
-           android:layout_marginLeft="20dp"
+       <!--<TextView-->
+           <!--android:layout_width="wrap_content"-->
+           <!--android:layout_height="wrap_content"-->
+           <!--android:textColor="@color/appgray"-->
+           <!--android:textSize="11sp"-->
+           <!--android:layout_marginLeft="20dp"-->
 
-           android:text="同步到 "/>
-       <ImageView
-           android:layout_width="16dp"
-           android:layout_height="16dp"
-           android:src="@drawable/wechaticon"
-           />
+           <!--android:text="同步到 "/>-->
+       <!--<ImageView-->
+           <!--android:layout_width="16dp"-->
+           <!--android:layout_height="16dp"-->
+           <!--android:src="@drawable/wechaticon"-->
+           <!--/>-->
 
-       <TextView
-           android:id="@+id/tv_fr_num"
-           android:layout_width="0dp"
-           android:layout_weight="1"
-           android:gravity="right"
-           android:layout_height="wrap_content"
-           android:layout_gravity="right"
-           android:layout_marginRight="18dp"
-           android:textSize="11sp"
-           android:textColor="@color/appgray"
-           android:text="0/140"/>
+       <!--<TextView-->
+           <!--android:id="@+id/tv_fr_num"-->
+           <!--android:layout_width="0dp"-->
+           <!--android:layout_weight="1"-->
+           <!--android:gravity="right"-->
+           <!--android:layout_height="wrap_content"-->
+           <!--android:layout_gravity="right"-->
+           <!--android:layout_marginRight="18dp"-->
+           <!--android:textSize="11sp"-->
+           <!--android:textColor="@color/appgray"-->
+           <!--android:text="0/140"/>-->
 
-   </LinearLayout>
+   <!--</LinearLayout>-->
 
 
     <View
@@ -113,14 +115,14 @@
         />
 
 
-    <TextView
-        android:id="@+id/tv_fr_cat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
-        android:textColor="@color/appblue"
-        android:onClick="chooseCats"
-        android:text="选择分类"/>
+    <!--<TextView-->
+        <!--android:id="@+id/tv_fr_cat"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="14sp"-->
+        <!--android:layout_marginLeft="20dp"-->
+        <!--android:layout_marginTop="15dp"-->
+        <!--android:textColor="@color/appblue"-->
+        <!--android:onClick="chooseCats"-->
+        <!--android:text="选择分类"/>-->
 </LinearLayout>
