--- a/amstory/src/main/res/layout/activity_story_eidt.xml
+++ b/amstory/src/main/res/layout/activity_story_eidt.xml
@@ -31,7 +31,7 @@
             android:layout_marginRight="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="完成"
+            android:text="下一步"
             android:textColor="@color/appblue"
             android:textSize="14sp"
             android:onClick="toOk" />
@@ -42,7 +42,7 @@
             android:textSize="16sp"
             android:layout_centerInParent="true"
             android:textStyle="bold"
-            android:textColor="#dd000000"
+            android:textColor="@color/appblue"
             android:text="添加音效"/>
 
     </RelativeLayout>
@@ -75,6 +75,7 @@
     </FrameLayout>
 
     <LinearLayout
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -99,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="toPlay"
-            android:src="@drawable/play_state_selector"/>
+            android:src="@drawable/sound_play"/>
 
         <ImageView
             android:layout_width="0dp"
@@ -109,6 +110,22 @@
             android:src="@drawable/ic_right"/>
 
     </LinearLayout>
+
+   <LinearLayout
+       android:gravity="center"
+       android:background="@color/white"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+
+       <TextView
+           android:id="@+id/beautify"
+           android:text="一键美化"
+           android:padding="@dimen/dimens_5dp"
+           android:textColor="@color/appblue"
+           android:background="@drawable/button_bg"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content" />
+   </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -142,7 +159,7 @@
                 android:gravity="center_vertical"
                 android:textColor="@color/appblue"
                 android:onClick="addBackMusic"
-                android:text="未选择"
+                android:text="点击更改"
                 />
         </LinearLayout>
 
@@ -222,15 +239,18 @@
                 android:text="音效特效"/>
 
 
-            <ImageView
+            <TextView
+                android:text="点击添加"
                 android:id="@+id/iv_edit_add_yinxiao"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:padding="4dp"
+                android:layout_marginLeft="@dimen/dimens_10dp"
+                android:textColor="@color/appblue"
+                android:textSize="12sp"
                 android:src="@drawable/ic_add_ee"
                 android:layout_gravity="center_vertical"
                 android:background="#fff"
-                android:layout_marginLeft="15dp"
                 android:onClick="addYinxiao"
                 />
 
