--- a/amstory/src/main/res/values/dimens.xml
+++ b/amstory/src/main/res/values/dimens.xml
@@ -29,6 +29,8 @@
     <dimen name="dimens_60dp">60dp</dimen>
     <dimen name="dimens_70dp">70dp</dimen>
     <dimen name="dimens_80dp">80dp</dimen>
+    <dimen name="dimens_90dp">90dp</dimen>
+    <dimen name="dimens_100dp">100dp</dimen>
     <dimen name="dimens_200dp">200dp</dimen>
 
 
